# ChangeLog for www-client/seamonkey
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.394 2012/07/02 14:09:05 polynomial-c Exp $

  02 Jul 2012; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.10.1.ebuild:
  Update license on >=seamonkey-2.10.1 to MPL-2.0

  27 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.10.1.ebuild:
  Added missing languages.

  20 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> -seamonkey-2.9.ebuild,
  -seamonkey-2.9.1-r2.ebuild, -seamonkey-2.10.ebuild:
  Removed old versions.

  19 Jun 2012; Andreas Schuerch <nativemad@gentoo.org> seamonkey-2.10.1.ebuild:
  x86 stable, thanks

  18 Jun 2012; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.10.1.ebuild:
  Stable for amd64, wrt bug #419917

*seamonkey-2.10.1 (16 Jun 2012)

  16 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> +seamonkey-2.10.1.ebuild:
  Version bump.

  15 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.10.ebuild:
  Use latest ff patchset.

  11 Jun 2012; Agostino Sarubbo <ago@gentoo.org> seamonkey-2.10.ebuild:
  Stable for amd64, wrt bug #420125

  10 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.10.ebuild:
  Fixed dependency on libpng. Thanks to Nathan Phillip Brink who reported this
  in bug #420457.

  08 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.10.ebuild:
  Added new ff-patchset to fix bug #419801.

  06 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> seamonkey-2.10.ebuild:
  Fixing dependencies on nss/nspr.

*seamonkey-2.10 (06 Jun 2012)

  06 Jun 2012; Lars Wendler <polynomial-c@gentoo.org> +seamonkey-2.10.ebuild:
  Version bump.

*seamonkey-2.9.1-r2 (29 May 2012)

  29 May 2012; Lars Wendler <polynomial-c@gentoo.org>
  -seamonkey-2.9.1-r1.ebuild, +seamonkey-2.9.1-r2.ebuild:
  Revision bump to incorporate gcc-4.7 fixes and a better patch for
  system-cairo support.
