@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/seamonkey-2.10.1.ebuild,v 1.5 2012/07/02 14:09:05 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/seamonkey-2.10.1.ebuild,v 1.6 2012/07/04 19:20:50 anarchy Exp $
 
 EAPI="3"
 WANT_AUTOCONF="2.1"
@@ -45,7 +45,7 @@ else
 fi
 
 SLOT="0"
-LICENSE="|| ( MPL-2.0 GPL-2 LGPL-2.1 )"
+LICENSE="MPL-2.0 GPL-2 LGPL-2.1"
 IUSE="+alsa +chatzilla +crypt +ipc +jit +roaming system-sqlite +webm"
 
 SRC_URI+="${SRC_URI}
